change mobile first

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="./resources/css/style.css" />
   </head>
   <body>
+    <header>
+      <div class="content">
+        <div class="box">
+          <img src="./resources/images/logo.png" alt="" />
+        </div>
+        <div class="box">Book a <span class="br-sm">Table</span></div>
+        <div class="box">Delivery <span class="br-sm">Service</span></div>
+        <div class="box">Menu</div>
+      </div>
+    </header>
     <nav>
       <div class="logoP">Urban Pizza</div>
       <ul>
@@ -20,26 +30,21 @@
         <li><a href="#">Jobs</a></li>
       </ul>
     </nav>
-    <header>
-      <div class="content">
-        <div class="box">
-          <img src="./resources/images/logo.png" alt="" />
-        </div>
-        <div class="box">
-          <div class="frame">Book a <br />Table</div>
-        </div>
-        <div class="box">
-          <div class="frame">
-            Delivery <br />
-            Service
-          </div>
-        </div>
-        <div class="box">
-          <div class="frame">Menu <br />Card</div>
-        </div>
-      </div>
-    </header>
-    <main></main>
+    <main>
+      <section id="about">
+        <h1>Urban Pizza</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cumque, quidem iusto sint,
+          labore dolor neque cupiditate dolorem sed eos sequi ad vitae ab tempore odit iure odio?
+          Dolores, maiores! Velit officiis optio fugit modi dolorem explicabo voluptatem magnam
+          eligendi expedita laborum dicta incidunt sapiente aperiam unde numquam, vero cum dolores
+          reiciendis consectetur obcaecati nostrum eaque molestias repudiandae. Eum, dignissimos!
+          Non quod inventore quo in nihil esse eligendi repellendus molestiae, est expedita
+          molestias modi deleniti ab ipsa sed placeat earum ex ipsam laborum atque dolorem dolor
+          illo. Incidunt, blanditiis molestiae?
+        </p>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
