add tablet and desktop breakpoint

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <div class="box">
           <img src="./resources/images/logo.png" alt="" />
         </div>
-        <div class="box">Book a <span class="br-sm">Table</span></div>
-        <div class="box">Delivery <span class="br-sm">Service</span></div>
-        <div class="box">Menu</div>
+        <div class="col">
+          <div class="box"><span class="center">Reservation</span></div>
+          <div class="box"><span class="center">Delivery</span></div>
+          <div class="box"><span class="center">Menu</span></div>
+        </div>
       </div>
     </header>
     <nav>
