add section portraits

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portrait</a></li>
-          <li><a href="#">Event</a></li>
-          <li><a href="#">Architecture</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#about">Studio</a></li>
+          <li><a href="#portrait">Portrait</a></li>
+          <li><a href="#event">Event</a></li>
+          <li><a href="#architecture">Architecture</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
       <div class="banner">
@@ -28,16 +28,63 @@
     </header>
     <section id="about">
       <h2>My Studio</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates beatae magni esse
-        corrupti, tempore accusamus impedit nostrum veniam earum voluptatum atque doloremque
-        officiis nulla magnam totam libero? Laudantium, omnis officiis!
-      </p>
+      <div class="row">
+        <div class="one-quarter">
+          <img src="./images/camila-cordeiro-Sxw7hTHL6TY-unsplash_crop.jpg" alt="" />
+        </div>
+        <div class="three-quarter">
+          <h3>About Me</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates beatae magni esse
+            corrupti, tempore accusamus impedit nostrum veniam earum voluptatum atque doloremque
+            officiis nulla magnam totam libero? Laudantium, omnis officiis!
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit fugiat maiores
+            totam amet obcaecati nulla assumenda porro blanditiis quasi a, facilis impedit officia
+            numquam rem quo sunt minus recusandae! Eos. Suscipit sed maxime quia quod, consequatur,
+            facere voluptatum asperiores iure iste magni hic. Amet explicabo asperiores impedit
+            consequatur aut possimus corporis nobis id, obcaecati rerum illum omnis hic nostrum
+            repellat?
+          </p>
+        </div>
+      </div>
     </section>
-    <section id="portraits">
+    <section id="portrait">
       <h2>Portraits</h2>
+      <div class="row">
+        <div class="one-quarter">
+          <img src="./images/portrait/behrouz-sasani-WRFfLW_xX5U-unsplash.jpg" alt="" />
+        </div>
+        <div class="one-quarter">
+          <img src="./images/portrait/ben-masora-k6TRBa2l9Vk-unsplash.jpg" alt="" />
+        </div>
+        <div class="one-quarter">
+          <img src="./images/portrait/gean-montoya-M2Hk2bVtNn4-unsplash.jpg" alt="" />
+        </div>
+        <div class="one-quarter">
+          <img src="./images/portrait/md-mahdi-gt2SOYWXrWM-unsplash.jpg" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="quarter-quarter">
+          <h3>Please take a seat.</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam accusantium
+            consequuntur quaerat asperiores qui! Aliquam facilis accusamus doloremque, ullam at
+            ducimus, corporis quae voluptatem officia veritatis modi fugit magni eveniet. Ea
+            deserunt perspiciatis adipisci, optio odit facere ad, praesentium laborum autem eaque
+            distinctio cum nostrum minus sed dignissimos iste? Error, repellat minima. Dolor commodi
+            quaerat vero, velit voluptatem illum facere.
+          </p>
+        </div>
+      </div>
     </section>
-    <section id="events">
+    <section id="event">
+      <h2>Events</h2>
+    </section>
+    <section id="architecture">
       <h2>Events</h2>
     </section>
     <section id="contact">
