add events section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Laura Lense</title>
+    <title>Laura Lens</title>
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href="#about">Studio</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#portrait">Portrait</a></li>
           <li><a href="#event">Event</a></li>
           <li><a href="#architecture">Architecture</a></li>
@@ -22,12 +22,12 @@
         </ul>
       </nav>
       <div class="banner">
-        <h1>Laura Lense</h1>
+        <h1>Laura Lens</h1>
         <p>Photography</p>
       </div>
     </header>
     <section id="about">
-      <h2>My Studio</h2>
+      <h2>About</h2>
       <div class="row">
         <div class="one-quarter">
           <img src="./images/camila-cordeiro-Sxw7hTHL6TY-unsplash_crop.jpg" alt="" />
@@ -54,21 +54,21 @@
     <section id="portrait">
       <h2>Portraits</h2>
       <div class="row">
-        <div class="one-quarter">
+        <div class="one-quarter two-quarter-mobil">
           <img src="./images/portrait/behrouz-sasani-WRFfLW_xX5U-unsplash.jpg" alt="" />
         </div>
-        <div class="one-quarter">
+        <div class="one-quarter two-quarter-mobil">
           <img src="./images/portrait/ben-masora-k6TRBa2l9Vk-unsplash.jpg" alt="" />
         </div>
-        <div class="one-quarter">
+        <div class="one-quarter two-quarter-mobil">
           <img src="./images/portrait/gean-montoya-M2Hk2bVtNn4-unsplash.jpg" alt="" />
         </div>
-        <div class="one-quarter">
+        <div class="one-quarter two-quarter-mobil">
           <img src="./images/portrait/md-mahdi-gt2SOYWXrWM-unsplash.jpg" alt="" />
         </div>
       </div>
       <div class="row">
-        <div class="quarter-quarter">
+        <div class="four-quarter">
           <h3>Please take a seat.</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam accusantium
@@ -83,9 +83,30 @@
     </section>
     <section id="event">
       <h2>Events</h2>
+      <div class="row">
+        <div class="two-quarter">
+          <img src="./images/events/chuttersnap-aEnH4hJ_Mrs-unsplash.jpg" alt="" />
+        </div>
+        <div class="two-quarter">
+          <img src="./images/events/nainoa-shizuru-NcdG9mK3PBY-unsplash.jpg" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="four-quarter">
+          <h3>Capture your precious moments.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod esse hic voluptate,
+            quisquam explicabo beatae? Rem sapiente natus architecto, odio fugiat iste quas
+            similique aspernatur asperiores quia eius est ea. Expedita, perspiciatis. Iste quia
+            corporis, earum at maiores minima magnam omnis dolores quas eius doloribus.
+            Reprehenderit quaerat nihil iusto maxime, explicabo, quidem voluptates amet cum culpa
+            corporis, eum quis numquam?
+          </p>
+        </div>
+      </div>
     </section>
     <section id="architecture">
-      <h2>Events</h2>
+      <h2>Architecture</h2>
     </section>
     <section id="contact">
       <h2>Contact</h2>
