add architecture section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="./images/camila-cordeiro-Sxw7hTHL6TY-unsplash_crop.jpg" alt="" />
         </div>
         <div class="three-quarter">
-          <h3>About Me</h3>
+          <h3>About me</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates beatae magni esse
             corrupti, tempore accusamus impedit nostrum veniam earum voluptatum atque doloremque
@@ -107,10 +107,63 @@
     </section>
     <section id="architecture">
       <h2>Architecture</h2>
+      <div class="row">
+        <div class="architecture-pictures">
+          <div class="img-block">
+            <img src="./images/architecture/anne-marie-pos-Tt_6cNzTDUk-unsplash.jpg" alt="" />
+          </div>
+          <div class="img-block">
+            <img src="./images/architecture/colin-lee-3PsXkO-gQ0E-unsplash.jpg" alt="" />
+          </div>
+          <div class="img-block">
+            <img src="./images/architecture/omair-k-3Oo-1pUjfi8-unsplash.jpg" alt="" />
+          </div>
+        </div>
+        <div class="architecture-text">
+          <h3>Buildings, Landscapes, Gardens</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, doloremque? Delectus
+            sint, nihil, alias enim reiciendis, dolorum quos facilis cum commodi eaque velit vitae
+            eum nulla expedita at sit similique? Doloremque, ipsum, eum vitae, delectus obcaecati
+            odit illo aperiam harum itaque molestias laudantium porro. Voluptas natus at dolor
+            optio, officiis odit sint corrupti eos, consequatur totam alias necessitatibus labore
+            suscipit. Tenetur laudantium suscipit eaque neque architecto voluptas enim totam sit
+            nisi! Tempora nisi est ratione suscipit ullam sint corporis vero eos. Quis voluptate
+            aspernatur saepe soluta. Voluptates temporibus ab quis!
+          </p>
+          <h4>A new perspective</h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt nemo, nulla culpa
+            magni officiis, nostrum impedit facere fugiat dolor exercitationem molestiae? Magni
+            aspernatur, incidunt qui esse in obcaecati doloribus praesentium? Asperiores velit
+            inventore quis itaque nemo facilis enim odit eos, eligendi iure dolores laboriosam
+            atque. Dolorem, at similique repellendus beatae culpa hic quidem sed, nesciunt
+            perspiciatis odit nisi tempore maxime.
+          </p>
+          <h4>A new insight</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime accusamus ad quos. Quis
+            in voluptate deleniti libero vel, autem enim. Cupiditate molestias nam recusandae
+            aperiam, reprehenderit dolorem corporis provident enim. Dignissimos a sint enim placeat!
+            Ad, totam repellat, sint fugit quibusdam quia maiores inventore saepe voluptatum
+            suscipit voluptate est. Cumque at incidunt quod architecto, voluptatum eveniet numquam
+            delectus iste. Cum.
+          </p>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <h2>Contact</h2>
     </section>
-    <footer>Footer</footer>
+    <footer>
+      <div>
+        <ul>
+          <li><a href="#">disclaimer</a></li>
+          <li><a href="#">imprint</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+      </div>
+      <div>&copy;Lorem 2021</div>
+    </footer>
   </body>
 </html>
