--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <title>Laura Lens</title>
   </head>
@@ -154,6 +155,22 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
+      <table>
+        <tbody>
+          <tr>
+            <td><span class="material-icons"> call </span></td>
+            <td>+43 123 1234567</td>
+          </tr>
+          <tr>
+            <td><span class="material-icons"> email </span></td>
+            <td>laura.lens@gmail.com</td>
+          </tr>
+          <tr>
+            <td><span class="material-icons"> place </span></td>
+            <td>Defaultroad 123<br />1090 Vienna<br />AUSTRIA</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
     <footer>
       <div>
